--- a/pom.xml
+++ b/pom.xml
@@ -20,14 +20,27 @@
             <artifactId>gson</artifactId>
             <version>2.11.0</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/nl.jqno.equalsverifier/equalsverifier -->
+
         <dependency>
             <groupId>nl.jqno.equalsverifier</groupId>
             <artifactId>equalsverifier</artifactId>
             <version>3.17</version>
-            <type>pom</type>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>nl.jqno.equalsverifier</groupId>-->
+<!--            <artifactId>equalsverifier</artifactId>-->
+<!--            <version>3.15.8</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
 
     </dependencies>
 
