--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,14 @@
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
 
-<!--        <dependency>-->
+        <!--        <dependency>-->
 <!--            <groupId>nl.jqno.equalsverifier</groupId>-->
 <!--            <artifactId>equalsverifier</artifactId>-->
 <!--            <version>3.15.8</version>-->
