--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>gson</artifactId>
             <version>2.11.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.15.3</version>
+        </dependency>
 
         <dependency>
             <groupId>nl.jqno.equalsverifier</groupId>
